test/cli/test/type/policy2.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: testcase-2
spec:
  rules:
  - name: test-rule
    match:
      all:
      - resources:
          kinds:
          - Deployment
    validate:
      deny:
        conditions:
          all:
          - key: "{{ abs(request.object.spec.replicas) }}"
            operator: NotEquals
            value: 2
