test/cli/test/type/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testcase-mo2ta--input
spec:
  integerField1: 123
