test/cli/test/type/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: testing-type
policies:
  - ./policy1.yaml
  - ./policy2.yaml
  - ./policy3.yaml
resources:
  - ./resource.yaml
results:
  - policy: testcase-1
    rule: test-rule
    resources:
      - testing
    kind: Deployment
    result: pass
  - policy: testcase-2
    rule: test-rule
    resources:
      - testing
    kind: Deployment
    result: pass
  - policy: testcase-3
    rule: test-rule
    resources:
      - testing
    kind: Deployment
    result: pass
